file path updated

--- a/diabetic_analysis_logistic_regression.ipynb
+++ b/diabetic_analysis_logistic_regression.ipynb
@@ -140,7 +140,7 @@
    "source": [
     "# load dataset\n",
     "col_names = ['pregnant', 'glucose', 'bp', 'skin', 'insulin', 'bmi', 'pedigree', 'age', 'label']\n",
-    "diabetes_data = pd.read_csv(\"diabetes.csv\", header=None, names=col_names)\n",
+    "diabetes_data = pd.read_csv(\"data/diabetes.csv\", header=None, names=col_names)\n",
     "diabetes_data.head()"
    ]
   },
@@ -439,6 +439,13 @@
    "source": [
     "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
