Integrated Flask GUI

--- a/diabetic_analysis_logistic_regression.ipynb
+++ b/diabetic_analysis_logistic_regression.ipynb
@@ -362,12 +362,189 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pregnant</th>\n",
+       "      <th>insulin</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>age</th>\n",
+       "      <th>glucose</th>\n",
+       "      <th>bp</th>\n",
+       "      <th>pedigree</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>662</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42.9</td>\n",
+       "      <td>22</td>\n",
+       "      <td>199</td>\n",
+       "      <td>76</td>\n",
+       "      <td>1.394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>2</td>\n",
+       "      <td>100</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>23</td>\n",
+       "      <td>107</td>\n",
+       "      <td>74</td>\n",
+       "      <td>0.404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>25</td>\n",
+       "      <td>76</td>\n",
+       "      <td>62</td>\n",
+       "      <td>0.391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>5</td>\n",
+       "      <td>175</td>\n",
+       "      <td>25.8</td>\n",
+       "      <td>51</td>\n",
+       "      <td>166</td>\n",
+       "      <td>72</td>\n",
+       "      <td>0.587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>530</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24.6</td>\n",
+       "      <td>31</td>\n",
+       "      <td>111</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>367</th>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>27.6</td>\n",
+       "      <td>29</td>\n",
+       "      <td>124</td>\n",
+       "      <td>72</td>\n",
+       "      <td>0.368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>2</td>\n",
+       "      <td>135</td>\n",
+       "      <td>31.6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>144</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0.422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>383</th>\n",
+       "      <td>1</td>\n",
+       "      <td>182</td>\n",
+       "      <td>25.4</td>\n",
+       "      <td>21</td>\n",
+       "      <td>109</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.947</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>55</td>\n",
+       "      <td>128</td>\n",
+       "      <td>78</td>\n",
+       "      <td>0.268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>464</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>27.6</td>\n",
+       "      <td>37</td>\n",
+       "      <td>88</td>\n",
+       "      <td>78</td>\n",
+       "      <td>0.258</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>192 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    pregnant insulin   bmi age glucose  bp pedigree\n",
+       "662        1       0  42.9  22     199  76    1.394\n",
+       "123        2     100  33.6  23     107  74    0.404\n",
+       "114        4       0    34  25      76  62    0.391\n",
+       "15         5     175  25.8  51     166  72    0.587\n",
+       "530        0       0  24.6  31     111  65     0.66\n",
+       "..       ...     ...   ...  ..     ...  ..      ...\n",
+       "367        6       0  27.6  29     124  72    0.368\n",
+       "302        2     135  31.6  25     144  58    0.422\n",
+       "383        1     182  25.4  21     109  60    0.947\n",
+       "141        3       0  21.1  55     128  78    0.268\n",
+       "464        5       0  27.6  37      88  78    0.258\n",
+       "\n",
+       "[192 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/plain": [
        "array([[118,  12],\n",
        "       [ 26,  36]], dtype=int64)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +567,7 @@
        "Text(0.5, 257.44, 'Predicted label')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -425,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -439,6 +616,75 @@
    "source": [
     "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import os\n",
+    "#Saving the model\n",
+    "if not os.path.exists('models'):\n",
+    "    os.makedirs('models')\n",
+    "    \n",
+    "MODEL_PATH = \"models/logistic_reg.sav\"\n",
+    "pickle.dump(logreg, open(MODEL_PATH, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(X_test[0])\n",
+    "# y_pred=logreg.predict([[]])\n",
+    "# y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1'], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# initialize list of lists \n",
+    "data = [[6, 0, 33.6, 50, 148, 72, 0.627]] \n",
+    "  \n",
+    "# Create the pandas DataFrame \n",
+    "df = pd.DataFrame(data, columns = ['pregnant','insulin','bmi','age','glucose','bp','pedigree']) \n",
+    "\n",
+    "#Predict On new Data\n",
+    "new_pred = logreg.predict(df)\n",
+    "new_pred\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
